Security camera AI range and detection fixed

--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,6 +50,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@TRJ208-09
 LastExecutedLaunchName=TRJ208-09
 LastExecutedPIEPreviewDevice=
+NewWindowPosition=(X=315,Y=143)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -1972,6 +1973,43 @@ REINST_Security_Camera_C_228.Rendering=True
 REINST_Security_Camera_C_228.Replication=True
 REINST_Security_Camera_C_228.Input=True
 REINST_Security_Camera_C_228.Actor=True
+REINST_Security_Camera_C_56.TransformCommon=True
+REINST_Security_Camera_C_56.Animation=True
+REINST_Security_Camera_C_56.Mesh=True
+REINST_Security_Camera_C_56.None=True
+REINST_Security_Camera_C_56.Physics=True
+REINST_Security_Camera_C_56.Clothing=True
+REINST_Security_Camera_C_56.Collision=True
+REINST_Security_Camera_C_56.Lighting=True
+REINST_Security_Camera_C_56.ClothingSimulation=True
+REINST_Security_Camera_C_56.Rendering=True
+REINST_Security_Camera_C_56.Tags=True
+REINST_Security_Camera_C_56.Activation=True
+REINST_Security_Camera_C_56.Cooking=True
+REINST_Security_Camera_C_56.Character Movement: Jumping / Falling=True
+REINST_Security_Camera_C_56.Character Movement (General Settings)=True
+REINST_Security_Camera_C_56.Character Movement: Walking=True
+REINST_Security_Camera_C_56.Character Movement: Swimming=True
+REINST_Security_Camera_C_56.Character Movement: Flying=True
+REINST_Security_Camera_C_56.Character Movement: Custom Movement=True
+REINST_Security_Camera_C_56.Character Movement (Rotation Settings)=True
+REINST_Security_Camera_C_56.Character Movement: Physics Interaction=True
+REINST_Security_Camera_C_56.Character Movement (Networking)=True
+REINST_Security_Camera_C_56.Character Movement=True
+REINST_Security_Camera_C_56.Character Movement: Avoidance=True
+REINST_Security_Camera_C_56.Character Movement: NavMesh Movement=True
+REINST_Security_Camera_C_56.RootMotion=True
+REINST_Security_Camera_C_56.NavMovement=True
+REINST_Security_Camera_C_56.Velocity=True
+REINST_Security_Camera_C_56.PlanarMovement=True
+REINST_Security_Camera_C_56.MovementComponent=True
+REINST_Security_Camera_C_56.Shape=True
+REINST_Security_Camera_C_56.Navigation=True
+REINST_Security_Camera_C_56.Character=True
+REINST_Security_Camera_C_56.Camera=True
+REINST_Security_Camera_C_56.Pawn=True
+REINST_Security_Camera_C_56.Input=True
+REINST_Security_Camera_C_56.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AI/AI_Patroll.AI_Patroll=1
@@ -1992,17 +2030,17 @@ REINST_Security_Camera_C_228.Actor=True
 /Game/AI/Tasks/FocusOnNextPoint.FocusOnNextPoint=0
 /Game/AI/Watchdog_AI_Behaviour.Watchdog_AI_Behaviour=0
 /Game/AI/Security_Camera/Focus_Points.Focus_Points=1
-/Game/AI/Security_Camera/Security_Camera.Security_Camera=1
+/Game/AI/Security_Camera/Security_Camera.Security_Camera=0
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
-Object="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.Tags.ComponentTags\" "
+Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.Tags.ComponentTags\" "
+AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
