added animations and model

--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,7 +74,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -89,6 +89,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/StealthGuy
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -679,8 +680,213 @@ HierarchicalLODOutliner.TimeStamp=2018.02.02-12.46.37
 HierarchicalLODOutliner.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2018.01.12-14.05.05
 MovieSceneCapture.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2018.02.02-12.46.43
+SkeletonEditor.LastCompileMethod=Unknown
+ClothingSystemEditorInterface.TimeStamp=2018.02.02-12.46.35
+ClothingSystemEditorInterface.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2018.02.02-12.46.39
+MaterialEditor.LastCompileMethod=Unknown
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+bUseAudioAttenuation=True
+ViewModeIndex=VMI_Lit
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.000000,G=1.000000,B=0.000000,A=1.000000)
+NotifyTimingNodeColor=(R=1.000000,G=0.000000,B=0.000000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+FbxImportUI.Mesh=True
+FbxImportUI.Animation=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LodSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Animation=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+TopDownCharacter_C.TransformCommon=True
+TopDownCharacter_C.Animation=True
+TopDownCharacter_C.Mesh=True
+TopDownCharacter_C.Clothing=True
+TopDownCharacter_C.Physics=True
+TopDownCharacter_C.Collision=True
+TopDownCharacter_C.ClothingSimulation=True
+TopDownCharacter_C.Lighting=True
+TopDownCharacter_C.Rendering=True
+TopDownCharacter_C.Tags=True
+TopDownCharacter_C.Activation=True
+TopDownCharacter_C.Cooking=True
+TopDownCharacter_C.Character Movement: Jumping / Falling=True
+TopDownCharacter_C.Character Movement (General Settings)=True
+TopDownCharacter_C.Character Movement: Walking=True
+TopDownCharacter_C.Character Movement: Swimming=True
+TopDownCharacter_C.Character Movement: Flying=True
+TopDownCharacter_C.Character Movement: Custom Movement=True
+TopDownCharacter_C.Character Movement (Rotation Settings)=True
+TopDownCharacter_C.Character Movement: Physics Interaction=True
+TopDownCharacter_C.Character Movement (Networking)=True
+TopDownCharacter_C.Character Movement=True
+TopDownCharacter_C.Character Movement: Avoidance=True
+TopDownCharacter_C.Character Movement: NavMesh Movement=True
+TopDownCharacter_C.RootMotion=True
+TopDownCharacter_C.NavMovement=True
+TopDownCharacter_C.Velocity=True
+TopDownCharacter_C.PlanarMovement=True
+TopDownCharacter_C.MovementComponent=True
+TopDownCharacter_C.Shape=True
+TopDownCharacter_C.Navigation=True
+TopDownCharacter_C.Character=True
+TopDownCharacter_C.Camera=True
+TopDownCharacter_C.Pawn=True
+TopDownCharacter_C.Input=True
+TopDownCharacter_C.Actor=True
+TopDownCharacter_C.Materials=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+bKeepOverlappingVertices=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[DetailPropertyExpansion]
+PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+Object=
+
+[MaterialEditor]
+PrimType=1
 
 
