fixed translucent character model and animations run properly

--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -45,8 +45,8 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@TRJ208-09
 LastExecutedLaunchName=TRJ208-09
 LastExecutedPIEPreviewDevice=
@@ -89,7 +89,29 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/StealthGuy
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/StealthGuy/Animation
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSizeScale=0.100000
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=ResourceSize
+SequenceBrowser.HiddenColumns=NumFrames
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -116,11 +138,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
+UNR=C:/Users/gdas/Documents/Unreal Projects/Year 1 Game/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
 BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-GenericImport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+GenericImport=../../../Animation/Standard Run.fbx
 GenericExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericOpen=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericSave=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
@@ -678,14 +700,22 @@ SceneOutliner.TimeStamp=2018.02.02-12.46.43
 SceneOutliner.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2018.02.02-12.46.37
 HierarchicalLODOutliner.LastCompileMethod=External
-MovieSceneCapture.TimeStamp=2018.01.12-14.05.05
-MovieSceneCapture.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2018.02.02-12.46.40
+MovieSceneCapture.LastCompileMethod=External
 SkeletonEditor.TimeStamp=2018.02.02-12.46.43
 SkeletonEditor.LastCompileMethod=Unknown
 ClothingSystemEditorInterface.TimeStamp=2018.02.02-12.46.35
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2018.02.02-12.46.39
 MaterialEditor.LastCompileMethod=Unknown
+PhysicsAssetEditor.TimeStamp=2018.02.02-12.46.41
+PhysicsAssetEditor.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2018.02.02-12.46.35
+AnimationEditor.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2018.02.02-12.46.35
+BlueprintGraph.LastCompileMethod=Unknown
+AnimationBlueprintEditor.TimeStamp=2018.02.02-12.46.35
+AnimationBlueprintEditor.LastCompileMethod=Unknown
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -720,6 +750,7 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
+bImportAnimations=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -820,6 +851,140 @@ StaticMeshComponent.Lighting=True
 StaticMeshComponent.Rendering=True
 StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
+PhysicsAssetGenerationSettings.Body Creation=True
+PhysicsAssetGenerationSettings.Constraint Creation=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.ClothingSimulation=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+FbxImportUI.LodSettings=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+TopDownCharacter_C.Tick=True
+TopDownCharacter_C.Replication=True
+TopDownCharacter_C.Variable=True
+TopDownCharacter_C.Sockets=True
+TopDownCharacter_C.ComponentReplication=True
+TopDownCharacter_C.Events=True
+REINST_TopDownCharacter_C_40.TransformCommon=True
+REINST_TopDownCharacter_C_40.Animation=True
+REINST_TopDownCharacter_C_40.Mesh=True
+REINST_TopDownCharacter_C_40.Clothing=True
+REINST_TopDownCharacter_C_40.Physics=True
+REINST_TopDownCharacter_C_40.Collision=True
+REINST_TopDownCharacter_C_40.ClothingSimulation=True
+REINST_TopDownCharacter_C_40.Lighting=True
+REINST_TopDownCharacter_C_40.Rendering=True
+REINST_TopDownCharacter_C_40.Tags=True
+REINST_TopDownCharacter_C_40.Activation=True
+REINST_TopDownCharacter_C_40.Cooking=True
+REINST_TopDownCharacter_C_40.Character Movement: Jumping / Falling=True
+REINST_TopDownCharacter_C_40.Character Movement (General Settings)=True
+REINST_TopDownCharacter_C_40.Character Movement: Walking=True
+REINST_TopDownCharacter_C_40.Character Movement: Swimming=True
+REINST_TopDownCharacter_C_40.Character Movement: Flying=True
+REINST_TopDownCharacter_C_40.Character Movement: Custom Movement=True
+REINST_TopDownCharacter_C_40.Character Movement (Rotation Settings)=True
+REINST_TopDownCharacter_C_40.Character Movement: Physics Interaction=True
+REINST_TopDownCharacter_C_40.Character Movement (Networking)=True
+REINST_TopDownCharacter_C_40.Character Movement=True
+REINST_TopDownCharacter_C_40.Character Movement: Avoidance=True
+REINST_TopDownCharacter_C_40.Character Movement: NavMesh Movement=True
+REINST_TopDownCharacter_C_40.RootMotion=True
+REINST_TopDownCharacter_C_40.NavMovement=True
+REINST_TopDownCharacter_C_40.Velocity=True
+REINST_TopDownCharacter_C_40.PlanarMovement=True
+REINST_TopDownCharacter_C_40.MovementComponent=True
+REINST_TopDownCharacter_C_40.Shape=True
+REINST_TopDownCharacter_C_40.Navigation=True
+REINST_TopDownCharacter_C_40.Character=True
+REINST_TopDownCharacter_C_40.Camera=True
+REINST_TopDownCharacter_C_40.Pawn=True
+REINST_TopDownCharacter_C_40.Input=True
+REINST_TopDownCharacter_C_40.Actor=True
+BP_LiamAnimation_C.RootMotion=True
+AnimationGraph.Graph=True
+AnimBlueprint.ClassOptions=True
+AnimBlueprint.Optimization=True
+AnimBlueprint.Interfaces=True
+AnimBlueprint.BlueprintOptions=True
+AnimBlueprint.Packaging=True
+AnimBlueprint.Thumbnail=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+BP_LiamAnimation_C.Default=True
+AnimationStateMachineGraph.Graph=True
+ThirdPerson_AnimBP_C.Default=True
+ThirdPerson_AnimBP_C.RootMotion=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+REINST_TopDownCharacter_C_81.TransformCommon=True
+REINST_TopDownCharacter_C_81.Animation=True
+REINST_TopDownCharacter_C_81.Mesh=True
+REINST_TopDownCharacter_C_81.Clothing=True
+REINST_TopDownCharacter_C_81.Physics=True
+REINST_TopDownCharacter_C_81.Collision=True
+REINST_TopDownCharacter_C_81.ClothingSimulation=True
+REINST_TopDownCharacter_C_81.Lighting=True
+REINST_TopDownCharacter_C_81.Rendering=True
+REINST_TopDownCharacter_C_81.Tags=True
+REINST_TopDownCharacter_C_81.Activation=True
+REINST_TopDownCharacter_C_81.Cooking=True
+REINST_TopDownCharacter_C_81.Character Movement: Jumping / Falling=True
+REINST_TopDownCharacter_C_81.Character Movement (General Settings)=True
+REINST_TopDownCharacter_C_81.Character Movement: Walking=True
+REINST_TopDownCharacter_C_81.Character Movement: Swimming=True
+REINST_TopDownCharacter_C_81.Character Movement: Flying=True
+REINST_TopDownCharacter_C_81.Character Movement: Custom Movement=True
+REINST_TopDownCharacter_C_81.Character Movement (Rotation Settings)=True
+REINST_TopDownCharacter_C_81.Character Movement: Physics Interaction=True
+REINST_TopDownCharacter_C_81.Character Movement (Networking)=True
+REINST_TopDownCharacter_C_81.Character Movement=True
+REINST_TopDownCharacter_C_81.Character Movement: Avoidance=True
+REINST_TopDownCharacter_C_81.Character Movement: NavMesh Movement=True
+REINST_TopDownCharacter_C_81.RootMotion=True
+REINST_TopDownCharacter_C_81.NavMovement=True
+REINST_TopDownCharacter_C_81.Velocity=True
+REINST_TopDownCharacter_C_81.PlanarMovement=True
+REINST_TopDownCharacter_C_81.MovementComponent=True
+REINST_TopDownCharacter_C_81.Shape=True
+REINST_TopDownCharacter_C_81.Navigation=True
+REINST_TopDownCharacter_C_81.Character=True
+REINST_TopDownCharacter_C_81.Camera=True
+REINST_TopDownCharacter_C_81.Pawn=True
+REINST_TopDownCharacter_C_81.Input=True
+REINST_TopDownCharacter_C_81.Actor=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -827,7 +992,7 @@ VertexColorImportOption=Ignore
 VertexOverrideColor=(B=255,G=255,R=255,A=255)
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
-bAutoGenerateCollision=True
+bAutoGenerateCollision=False
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
@@ -888,5 +1053,22 @@ Object=
 
 [MaterialEditor]
 PrimType=1
+
+[AssetEditorToolkitTabLocation]
+/Game/TopDownBP/StealthGuy/liam_Skeleton.liam_Skeleton=1
+/Game/TopDownBP/StealthGuy/liam.liam=1
+/Game/TopDownBP/StealthGuy/liam_PhysicsAsset.liam_PhysicsAsset=1
+/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin=1
+/Game/TopDownBP/StealthGuy/Bodymat.Bodymat=1
+/Game/TopDownBP/StealthGuy/Bottommat.Bottommat=1
+/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=1
+/Game/TopDownBP/StealthGuy/Animation/BP_LiamAnimation.BP_LiamAnimation=1
+/Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP=1
+
+[PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/StealthGuy/liam.liam;
+
+[DetailCategoriesAdvanced]
+FbxImportUI.Mesh=True
 
 
