--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,7 +94,7 @@ None=======
 None=======
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/StealthGuy/Animation
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -162,7 +162,7 @@ LastLogListing=PIE
 LastLogListing=FBXImport
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=332.000 Y=324.000
@@ -183,7 +183,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/gdas/Documents/Unreal Projects/Year 1 Game/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
+UNR=../../../../../../Users/Joel/Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
 BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
@@ -751,8 +751,8 @@ BlueprintGraph.TimeStamp=2018.01.26-13.19.52
 BlueprintGraph.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2018.01.16-12.00.59
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-ExternalImagePicker.TimeStamp=2018.01.19-15.37.10
-ExternalImagePicker.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2018.01.20-10.44.54
+ExternalImagePicker.LastCompileMethod=External
 SynthBenchmark.TimeStamp=2018.01.16-10.04.18
 SynthBenchmark.LastCompileMethod=External
 
@@ -2846,6 +2846,61 @@ AmbientSound.Activation=True
 AmbientSound.Cooking=True
 AmbientSound.Rendering=True
 AmbientSound.Actor=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+Door_C.TransformCommon=True
+Door_C.Rendering=True
+Door_C.Input=True
+Door_C.Actor=True
+Door3_C.TransformCommon=True
+Door3_C.Rendering=True
+Door3_C.Input=True
+Door3_C.Actor=True
+Door_C.Tick=True
+Door_C.Default=True
+Door_C.Replication=True
+Door3_C.Tick=True
+Door3_C.Default=True
+Door3_C.Replication=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+Door2_C.Tick=True
+Door2_C.Default=True
+Door2_C.Rendering=True
+Door2_C.Replication=True
+Door2_C.Input=True
+Door2_C.Actor=True
+Door4_C.Tick=True
+Door4_C.Default=True
+Door4_C.Rendering=True
+Door4_C.Replication=True
+Door4_C.Input=True
+Door4_C.Actor=True
+Door5_C.Tick=True
+Door5_C.Default=True
+Door5_C.Rendering=True
+Door5_C.Replication=True
+Door5_C.Input=True
+Door5_C.Actor=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -2910,23 +2965,28 @@ bImportAnimations=True
 /Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=1
 /Game/TopDownBP/StealthGuy/Animation/BP_LiamAnimation.BP_LiamAnimation=1
 /Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP=1
+/Game/TopDownBP/Blueprints/Door.Door=1
+/Game/TopDownBP/Blueprints/Door3.Door3=1
+/Game/TopDownBP/Blueprints/Door2.Door2=1
+/Game/TopDownBP/Blueprints/Door4.Door4=1
+/Game/TopDownBP/Blueprints/Door5.Door5=1
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-Object=
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent=
-SceneComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2990,6 +3050,10 @@ REINST_AI_Character_C_106="\"Object.Character.CharacterMovement.Object.Character
 REINST_AI_Character_C_118="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" \"Object.Tags.ComponentTags\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+TopDownCharacter_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/AI/AI_Character.AI_Character;
@@ -3060,6 +3124,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.SetDestination,InputS
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
 AI_Patroll_C=AI_Patroll_C.Physics.ConstraintsGroup,AI_Patroll_C.Rendering.TextureStreaming,AI_Patroll_C.Rendering.LOD,
+BoxComponent=BoxComponent.Collision.Collision,
 
 [DetailCategoriesAdvanced]
 NavMeshBoundsVolume.Collision=True
