--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,6 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab2.SourcesExpanded=False
@@ -118,7 +117,6 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [RootWindow]
 ScreenPosition=X=332.000 Y=324.000
@@ -709,7 +707,7 @@ HierarchicalLODUtilities.TimeStamp=2018.01.16-12.00.59
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2018.01.19-15.37.10
 ExternalImagePicker.LastCompileMethod=Unknown
-SynthBenchmark.TimeStamp=2018.01.16-10.04.18
+SynthBenchmark.TimeStamp=2018.01.26-13.18.02
 SynthBenchmark.LastCompileMethod=External
 
 [MessageLog]
@@ -2153,6 +2151,16 @@ AIPerceptionStimuliSourceComponent.ComponentReplication=True
 AIPerceptionStimuliSourceComponent.Cooking=True
 AIPerceptionStimuliSourceComponent.Events=True
 K2Node_GetClassDefaults.PinOptions=True
+TopDownController_C.Default=True
+TopDownController_C.Tick=True
+TopDownController_C.PlayerController=True
+TopDownController_C.Cheat Manager=True
+TopDownController_C.MouseInterface=True
+TopDownController_C.Game=True
+TopDownController_C.Controller=True
+TopDownController_C.Replication=True
+TopDownController_C.Input=True
+TopDownController_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AI/AI_Patroll.AI_Patroll=1
@@ -2176,6 +2184,7 @@ K2Node_GetClassDefaults.PinOptions=True
 /Game/AI/Security_Camera/Security_Camera.Security_Camera=0
 /Game/AI/Tasks/Turn_Around.Turn_Around=1
 /Game/TopDownBP/TopDownOverview.TopDownOverview=1
+/Game/TopDownBP/Blueprints/TopDownController.TopDownController=1
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
