Updating any changes - still not working

--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -732,7 +732,7 @@ SynthBenchmark.TimeStamp=2018.01.16-10.04.18
 SynthBenchmark.LastCompileMethod=External
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -3548,6 +3548,46 @@ PhysicsAssetGenerationSettings.Body Creation=True
 PhysicsAssetGenerationSettings.Constraint Creation=True
 BP_LiamAnimation_C.Default=True
 BP_LiamAnimation_C.RootMotion=True
+BPOpenHackingTerminal_C.Tick=True
+BPOpenHackingTerminal_C.Rendering=True
+BPOpenHackingTerminal_C.Replication=True
+BPOpenHackingTerminal_C.Input=True
+BPOpenHackingTerminal_C.Actor=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+TopDownCharacter_C.Default=True
+TopDownController_C.Default=True
+TopDownController_C.Tick=True
+TopDownController_C.PlayerController=True
+TopDownController_C.Cheat Manager=True
+TopDownController_C.MouseInterface=True
+TopDownController_C.Game=True
+TopDownController_C.Controller=True
+TopDownController_C.Replication=True
+TopDownController_C.Input=True
+TopDownController_C.Actor=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3625,6 +3665,9 @@ bImportAnimations=True
 /Game/TopDownBP/Blueprints/AutoDoor.AutoDoor=1
 /Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=1
 /Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset.SK_Mannequin_PhysicsAsset=1
+/Game/TopDownBP/Blueprints/BPOpenHackingTerminal.BPOpenHackingTerminal=1
+/Game/TopDownBP/Blueprints/TopDownController.TopDownController=1
+/Game/TopDownBP/StealthGuy/Animation/Zombie_Death.Zombie_Death=1
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
@@ -5670,5 +5713,8 @@ bConvertSceneUnit=False
 [MaterialEditor]
 PrimType=1
 None=======
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
 
 
