--- a/ProjectEspionage/Saved/Config/Windows/Engine.ini
+++ b/ProjectEspionage/Saved/Config/Windows/Engine.ini
@@ -30,4 +30,12 @@ EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
+
 
