--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -736,7 +736,6 @@ SynthBenchmark.LastCompileMethod=External
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/BP_Key.BP_Key
 
 [RootWindow]
 ScreenPosition=X=332.000 Y=324.000
@@ -1878,6 +1877,8 @@ BlueprintGraph.TimeStamp=2018.01.26-13.15.45
 BlueprintGraph.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2018.01.26-13.15.46
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+SynthBenchmark.TimeStamp=2018.01.26-13.15.49
+SynthBenchmark.LastCompileMethod=Unknown
 
 [DetailCategories]
 AI_Patroll_C.Tick=True
@@ -4249,6 +4250,7 @@ bImportAnimations=True
 /Game/TopDownBP/Blueprints/BPSpawnFinalKey.BPSpawnFinalKey=1
 /Game/TopDownBP/Blueprints/BPHackingTerminal.BPHackingTerminal=1
 /Game/TopDownBP/Blueprints/BPSpawnEndLevel.BPSpawnEndLevel=1
+/Game/TopDownBP/Blueprints/BP_Key.BP_Key=1
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
