--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,7 +82,7 @@ OnlyBuildVisibility=False
 [ContentBrowser]
 None=======
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -128,7 +128,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Joel/Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
+UNR=F:/My Documents/UnrealGame/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
 BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
